--- a/index.html
+++ b/index.html
@@ -1,18 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jasdeep Singh | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, I'm [Your Name] 👋</h1>
-  <p>Welcome to my portfolio! I'm a student developer interested in cloud computing, APIs, and machine learning.</p>
+  <header>
+    <h1>👋 Hi, I'm Jasdeep Singh</h1>
+    <p>Student Developer | AI & Cloud Enthusiast | Lifelong Learner</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-  <h2>Projects</h2>
-  <ul>
-    <li><a href="https://github.com/yourusername/chatbot-project">Chatbot Project</a></li>
-    <li><a href="https://github.com/yourusername/ml-analyzer">Machine Learning Analyzer</a></li>
-  </ul>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I'm a computer science student passionate about building practical projects that combine 
+      <strong>cloud computing</strong>, <strong>machine learning</strong>, and <strong>APIs</strong>. 
+      I enjoy experimenting with new technologies and applying what I learn in real-world projects.
+    </p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+
+    <div class="project">
+      <h3>🤖 Chatbot Project</h3>
+      <p>
+        A cloud-connected chatbot built using Python and Flask, integrated with third-party APIs 
+        for natural language responses and user interaction.
+      </p>
+      <a href="https://github.com/jasdeepxcs/chatbot-project" target="_blank">View on GitHub →</a>
+    </div>
+
+    <div class="project">
+      <h3>📊 Machine Learning Analyzer</h3>
+      <p>
+        A Python-based ML tool using Pandas and Scikit-learn to visualize and predict data trends. 
+        Includes preprocessing and model performance comparison features.
+      </p>
+      <a href="https://github.com/jasdeepxcs/ml-analyzer" target="_blank">View on GitHub →</a>
+    </div>
+
+    <div class="project">
+      <h3>🌼 Bee Garden Simulation</h3>
+      <p>
+        A JavaFX simulation game where bees interact with flowers using custom movement and energy mechanics.
+      </p>
+      <a href="https://github.com/jasdeepxcs/bee-garden" target="_blank">View on GitHub →</a>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>
+      📧 <a href="mailto:youremail@example.com">youremail@example.com</a><br />
+      💼 <a href="https://www.linkedin.com/in/yourlinkedin/" target="_blank">LinkedIn Profile</a>
+    </p>
+  </section>
+
+  <footer>
+    <p>© 2025 Jasdeep Singh | Built with ❤️ using GitHub Pages</p>
+  </footer>
 </body>
 </html>
