--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>
-      📧 <a href="mailto:youremail@example.com">youremail@example.com</a><br />
+      📧 <a href="mailto:youremail@example.com">jasdeepxcs@gmail.com</a><br />
       💼 <a href="https://www.linkedin.com/in/yourlinkedin/" target="_blank">LinkedIn Profile</a>
     </p>
   </section>
