--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2>Contact</h2>
     <p>
       📧 <a href="mailto:youremail@example.com">jasdeepxcs@gmail.com</a><br />
-      💼 <a href="https://www.linkedin.com/in/yourlinkedin/" target="_blank">LinkedIn Profile</a>
+      💼 <a href="https://www.linkedin.com/in/yourlinkedin/" target="https://www.linkedin.com/in/sjasdeepcs/">LinkedIn Profile</a>
     </p>
   </section>
 
