--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>👋 Hi, I'm Jasdeep Singh</h1>
+    <h1> Jasdeep Singh</h1>
     <p>Student Developer | AI & Cloud Enthusiast | Lifelong Learner</p>
     <nav>
       <a href="#about">About</a>
@@ -59,8 +59,8 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>
-      📧 <a href="mailto:youremail@example.com">jasdeepxcs@gmail.com</a><br />
-      💼 <a href="https://www.linkedin.com/in/yourlinkedin/" target="https://www.linkedin.com/in/sjasdeepcs/">LinkedIn Profile</a>
+      📧 <a href="mailto:jasdeepxcs@gmail.com">jasdeepxcs@gmail.com</a><br />
+      💼 <a href="https://www.linkedin.com/in/sjasdeepcs/" target="_blank">LinkedIn Profile</a>
     </p>
   </section>
 
